feat: 多轮会话管理